$Id: ChangeLog,v 1.97 2004/11/06 15:53:04 manuelbi Exp $

2004-11-06 Joost Yervante Damad <joost@lumatec.be>
	* make it possible to disable symlink for install
	* removed some ^M's from AUTHORS file

2004-11-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed all hard loopends used in combination with static arrays to
	  avoid problem with adding or removing elements in those arrays (e.g.
	  the media types).

2004-11-06 Manuel Bilderbeek <manuel@msxnet.org>
	* Removed all .Cas stuff, and replaced it by two cassetteplayer
	  controls, which still need to be made functional. Thanks to Herman
	  for finding some bugs. See his commit of today :)
	* Internally renamed all Tape(1) stuff to Cassette
	* Some layout tweaks (mainly esthetical) and added tool tip
	* Made Rewind and Force Play buttons functional
	* Disable Cassette stuff when there's no cassette port in the running
	  machine; disable buttons when there's no cassette selected
	  TODO: the controls get disabled briefly (during silent launch) and
	  then get enabled again if the port is found... Fix it if you can! ;)

2004-10-16 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed a problem with inserting a disk while openMSX is running.
	* Fixed a problem with change focus and diskb (value from
	   diska was taken instead of diskb).

2004-10-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Paths are now saved as soon as the openMSX config dialog
	   is closed.

2004-10-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed printerport plugin mechanism.
	* Instead of using LaunchMode, every openMSX reply
	   is linked to a handler-target. This can be either the
	   interactive handler code or the automatic startup code.
	   Advantage is that commands are no longer ignored, even
	   at startup (Thanks to BifiMsx, Albert Beevendorp, for this
	   solution).

2004-10-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed printerlogger pluggable
	* removed tear-off option from menu's